--- a/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
+++ b/client/src/CSS/scss_partials/home/projects-bugs-shared/item/_itemViewTopBar.scss
@@ -8,9 +8,10 @@
 	z-index: 2;
 	position: fixed;
 	top: v.$common-top-bar-top;
-	border: v.$common-top-bar-border-width solid v.$mode-common-top-bar-border-color-light;
-	border-width: v.$common-top-bar-border-width 0 v.$item-view-list-sidebar-border-width
-		0;
+	border: v.$common-top-bar-border-width solid
+		v.$mode-common-top-bar-border-color-light;
+	border-width: v.$common-top-bar-border-width 0
+		v.$item-view-list-sidebar-border-width 0;
 	background-color: v.$mode-common-top-bar-background-color-light;
 	height: v.$common-top-bar-height;
 	/* height: v.$common-top-bar-height; */
@@ -38,7 +39,8 @@
 		border-right: none;
 		border-radius: v.$common-top-bar-buttton-border-radius 0 0
 			v.$common-top-bar-buttton-border-radius;
-		padding: 0px v.$common-top-bar-search-bar-padding 0px v.$common-top-bar-search-bar-padding;
+		padding: 0px v.$common-top-bar-search-bar-padding 0px
+			v.$common-top-bar-search-bar-padding;
 		background-color: v.$mode-common-top-bar-search-bar-background-color-light;
 		height: v.$common-top-bar-search-bar-height;
 		width: v.$item-view-top-bar-search-bar-width -
@@ -73,20 +75,26 @@
 		font-size: v.$common-top-bar-search-button-icon-font-size;
 	}
 
-	.list-filter-or-sort-container {
+	// Supposed to contain filter-button-component and filter-button-component.
+	.filter-components-container {
 		position: absolute;
-		left: v.$item-view-top-bar-filter-button-left;
+		left: v.$item-view-top-bar-filter-container-left;
 	}
 
-	.list-filter-or-sort-container--sort-placement {
-		left: v.$item-view-top-bar-sort-button-left;
+	// Supposed to contain sort-button-component and sort-button-component.
+	.sort-components-container {
+		position: absolute;
+		left: v.$item-view-top-bar-sort-container-left;
 	}
 
-	.list-filter-or-sort-container__button {
+	// Contains CSS shared between both buttons
+	@mixin filterSortButton {
 		@include m.stop-text-selection();
 
-		// Must be more than list-filter-or-sort-container__dropdown
-		// ...so its top border can be covered to make the two containers look like one
+		// Must be more than item-view-top-bar-filter-dropdown-component and
+		// item-view-top-bar-sort-dropdown-component z-index so their top border
+		// can be covered over by the button components when with-dropdown-displayed
+		// modifier is appened to make the buttons and dropdowns look like one.
 		z-index: 1;
 		position: absolute;
 		top: 9px;
@@ -97,36 +105,71 @@
 		height: v.$common-top-bar-button-height;
 		width: v.$item-view-top-bar-filter-sort-button-width;
 		color: v.$mode-common-top-bar-button-and-dropdown-text-color-light;
-		font-size: v.$common-top-bar-filter-button-font-size;
+		font-size: v.$common-top-bar-button-font-size;
 		text-align: center;
 		cursor: pointer;
 	}
 
-	.list-filter-or-sort-container__button--clicked {
-		// Negative margin because border resize moves the element
-		margin: -2px 0px;
-		border: v.$common-top-bar-clicked-dropdown-button-border-width solid black;
+	.item-view-top-bar-filter-button-component {
+		@include filterSortButton();
+	}
+
+	.item-view-top-bar-sort-button-component {
+		@include filterSortButton();
+	}
+
+	// Contains CSS shared between both button modifiers
+	@mixin filterSortButtonWithDropdownModifier {
+		// Negative top margin because border resize moves the element
+		margin: -(
+				v.$common-top-bar-filter-button-with-dropdown-displayed-border-width-difference
+			) 0px 0px;
+		border: v.$common-top-bar-filter-button-with-dropdown-displayed-border-width
+			solid black;
 		border-radius: v.$common-top-bar-buttton-border-radius
 			v.$common-top-bar-buttton-border-radius 0 0;
 		border-bottom: none;
 		height: 45px;
 		width: v.$item-view-top-bar-filter-sort-button-width -
-			(v.$common-top-bar-clicked-dropdown-button-border-width-difference * 2);
+			(
+				v.$common-top-bar-filter-button-with-dropdown-displayed-border-width-difference *
+					2
+			);
 	}
 
-	.list-filter-or-sort-container__button__text--active {
+	.item-view-top-bar-filter-button-component--with-dropdown-displayed {
+		@include filterSortButtonWithDropdownModifier();
+	}
+
+	.item-view-top-bar-sort-button-component--with-dropdown-displayed {
+		@include filterSortButtonWithDropdownModifier();
+	}
+
+	// Contains CSS shared between both button texts
+	@mixin filterSortButtonText {
+		// Used horizontal-center instead of dead-center since with-dropdown-displayed
+		// modifier would move the text
+		@include m.horizontal-center();
+		// Top found by eyeing it
+		top: 5px;
+		width: 100%;
+	}
+
+	.item-view-top-bar-filter-button-component__text {
+		@include filterSortButtonText();
+	}
+
+	.item-view-top-bar-sort-button-component__text {
+		@include filterSortButtonText();
+	}
+
+	.item-view-top-bar-filter-button-component__text--active {
 		font-weight: bold;
 		color: v.$common-top-bar-filter-button-active-color;
 	}
 
-	.list-filter-or-sort-container__button__text {
-		// Used horizontal-center since resize would move the text
-		@include m.horizontal-center();
-		top: 4px;
-		width: 100%;
-	}
-
-	.list-filter-or-sort-container__dropdown {
+	// Contains CSS shared between both dropdowns
+	@mixin filterSortDropdown {
 		// Must be border-box because the zoom on the webpage can resize the border otherwise
 		-webkit-box-sizing: border-box;
 		-moz-box-sizing: border-box;
@@ -137,34 +180,76 @@
 		top: 52.2px;
 		border: 3px solid black;
 		border-radius: 0 v.$common-top-bar-buttton-border-radius
-			v.$common-top-bar-buttton-border-radius v.$common-top-bar-buttton-border-radius;
+			v.$common-top-bar-buttton-border-radius
+			v.$common-top-bar-buttton-border-radius;
 		background-color: white;
-		height: v.$common-top-bar-filter-dropdown-content-container-height;
-		width: v.$common-top-bar-filter-dropdown-content-container-width;
+		height: v.$common-top-bar-filter-sort-dropdown-content-container-height;
 		cursor: default;
-		// Made visible using JS
-		visibility: hidden;
 	}
 
-	.list-filter-or-sort-container__dropdown--sort-width {
+	.item-view-top-bar-filter-dropdown-component {
+		@include filterSortDropdown();
+
+		width: v.$common-top-bar-filter-dropdown-content-container-width;
+	}
+
+	.item-view-top-bar-sort-dropdown-component {
+		@include filterSortDropdown();
+
 		width: v.$item-view-top-bar-sort-dropdown-content-container-width;
 	}
 
-	.list-filter-or-sort-container__dropdown--shorter {
-		height: v.$common-top-bar-filter-dropdown-content-container-shorter-height;
+	.item-view-top-bar-filter-dropdown-component--height-for-bugs {
+		height: v.$common-top-bar-filter-dropdown-content-container-for-bugs-height;
 	}
 
-	.list-filter-or-sort-container__dropdown--visible {
-		visibility: visible;
+	.item-view-top-bar-filter-dropdown-component__filter-content {
+		float: left;
+		margin: v.$common-top-bar-filter-button-dropdown-title-margin-top 0 0
+			v.$common-top-bar-filter-button-dropdown-title-margin-on-one-side;
+		text-align: center;
+		font-size: v.$common-top-bar-filter-dropdown-content-font-size;
 	}
 
-	.list-filter-or-sort-container__dropdown__sort-content-block {
+	.item-view-top-bar-filter-dropdown-component__filter-content--right {
+		float: right;
+		margin: v.$common-top-bar-filter-button-dropdown-title-margin-top
+			v.$common-top-bar-filter-button-dropdown-title-margin-on-one-side 0 0;
+	}
+
+	.item-view-top-bar-filter-dropdown-component__filter-content__title {
+		display: block;
+		margin: 2px 0px 5px 0px;
+		border-bottom: 1px solid gray;
+		padding-bottom: 3px;
+		font-weight: bold;
+	}
+
+	.item-view-top-bar-filter-dropdown-component__filter-content__block {
+		text-align: left;
+	}
+
+	.item-view-top-bar-filter-dropdown-component__filter-content__block__checkbox-container {
+		display: inline-block;
+		margin: v.$common-top-bar-filter-button-dropdown-checkbox-container-margin;
+	}
+
+	.item-view-top-bar-filter-dropdown-component__filter-content__block__label {
+		display: inline-block;
+		margin: v.$common-top-bar-filter-button-dropdown-label-margin;
+	}
+
+	.item-view-top-bar-filter-dropdown-component__filter-content__block__label--active {
+		color: v.$common-top-bar-filter-button-active-color;
+	}
+
+	.item-view-top-bar-sort-dropdown-component__sort-content-block {
 		position: relative;
 		margin: 12.5px 0;
 		width: 100%;
 	}
 
-	.list-filter-or-sort-container__dropdown__sort-content-block__sort-arrows-container {
+	.item-view-top-bar-sort-dropdown-component__sort-content-block__sort-arrows-container {
 		display: inline-block;
 		margin-left: 8px;
 		height: 100%;
@@ -173,48 +258,8 @@
 		width: 21px;
 	}
 
-	.list-filter-or-sort-container__dropdown__sort-content-block__title {
+	.item-view-top-bar-sort-dropdown-component__sort-content-block__title {
 		font-size: 15px;
-	}
-
-	.list-filter-or-sort-container__dropdown__filter-content {
-		float: left;
-		margin: v.$common-top-bar-filter-button-dropdown-title-margin-top 0 0
-			v.$common-top-bar-filter-button-dropdown-title-margin-on-one-side;
-		text-align: center;
-		font-size: v.$common-top-bar-filter-dropdown-content-font-size;
-	}
-
-	.list-filter-or-sort-container__dropdown__filter-content--right {
-		float: right;
-		margin: v.$common-top-bar-filter-button-dropdown-title-margin-top
-			v.$common-top-bar-filter-button-dropdown-title-margin-on-one-side 0 0;
-	}
-
-	.list-filter-or-sort-container__dropdown__filter-content__title {
-		display: block;
-		margin: 2px 0px 5px 0px;
-		border-bottom: 1px solid gray;
-		padding-bottom: 3px;
-		font-weight: bold;
-	}
-
-	.list-filter-or-sort-container__dropdown__filter-content__block {
-		text-align: left;
-	}
-
-	.list-filter-or-sort-container__dropdown__filter-content__block__checkbox-container {
-		display: inline-block;
-		margin: v.$common-top-bar-filter-button-dropdown-checkbox-container-margin;
-	}
-
-	.list-filter-or-sort-container__dropdown__filter-content__block__label {
-		display: inline-block;
-		margin: v.$common-top-bar-filter-button-dropdown-label-margin;
-	}
-
-	.list-filter-or-sort-container__dropdown__filter-content__block__label--active {
-		color: v.$common-top-bar-filter-button-active-color;
 	}
 
 	.item-options-container {
@@ -231,7 +276,8 @@
 		position: absolute;
 		right: 0px;
 		// Border given color through JS
-		border: v.$common-top-bar-clicked-dropdown-button-border-width solid transparent;
+		border: v.$common-top-bar-filter-button-with-dropdown-displayed-border-width
+			solid transparent;
 		border-radius: v.$common-top-bar-buttton-border-radius
 			v.$common-top-bar-buttton-border-radius 0 0;
 		border-bottom: none;
@@ -266,7 +312,8 @@
 		right: 0;
 		border: 3px solid black;
 		border-radius: v.$common-top-bar-buttton-border-radius 0
-			v.$common-top-bar-buttton-border-radius v.$common-top-bar-buttton-border-radius;
+			v.$common-top-bar-buttton-border-radius
+			v.$common-top-bar-buttton-border-radius;
 		background-color: white;
 		color: v.$mode-item-view-top-bar-icon-button-text-color-light;
 		width: 129px;
