--- a/client/src/CSS/scss_partials/_app.scss
+++ b/client/src/CSS/scss_partials/_app.scss
@@ -567,30 +567,31 @@ body {
 		}
 	}
 
-	// Light/Dark mode -- ItemViewTopBar component 'item-options-container__icon-button'
-	// ...element -- clicked border, background, and text color
-	.js-get-item-view-top-bar-component-options-icon-button-element-clicked-border-background-text-color-dark-mode-false {
+	// Light/Dark mode -- ItemViewTopBarOptionsButton component -- 
+	// with-dropdown-displayed border, background, and text color
+	.js-get-item-view-top-bar-options-button-component-with-dropdown-displayed-background-text-color-dark-mode-false {
 		border-color: v.$mode-common-top-bar-button-and-dropdown-border-color-light;
 		background-color: v.$mode-common-top-bar-button-and-dropdown-background-color-light;
 		// Same as hover text color for more distinct icon-buttons
 		color: v.$mode-item-view-top-bar-icon-button-hover-text-color-light;
 	}
-	.js-get-item-view-top-bar-component-options-icon-button-element-clicked-border-background-text-color-dark-mode-true {
+	.js-get-item-view-top-bar-options-button-component-with-dropdown-displayed-background-text-color-dark-mode-true {
 		border-color: v.$mode-common-top-bar-button-and-dropdown-border-color-dark;
 		background-color: v.$mode-common-top-bar-button-and-dropdown-background-color-dark;
 		// Same as hover text color for more distinct icon-buttons
 		color: v.$mode-item-view-top-bar-icon-button-hover-text-color-dark;
 	}
 
-	// Light/Dark mode -- ItemViewTopBar component 'item-options-container__dropdown__row-button'
-	// ...element -- hover background color
-	.js-get-item-view-top-bar-component-options-dropdown-row-button-element-hover-background-color-dark-mode-false {
+	// Light/Dark mode -- ItemViewTopBarOptionsDropdown component 
+	// 'item-view-top-bar-options-dropdown-component__row-button' element -- 
+	// hover background color
+	.js-get-item-view-top-bar-options-button-row-button-element-hover-background-color-dark-mode-false {
 		&:hover,
 		&:active {
 			background-color: v.$mode-item-view-top-bar-options-dropdown-row-hover-background-color-light;
 		}
 	}
-	.js-get-item-view-top-bar-component-options-dropdown-row-button-element-hover-background-color-dark-mode-true {
+	.js-get-item-view-top-bar-options-button-row-button-element-hover-background-color-dark-mode-true {
 		&:hover,
 		&:active {
 			background-color: v.$mode-item-view-top-bar-options-dropdown-row-hover-background-color-dark;
