--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -123,13 +123,13 @@
   height: 100vh;
   width: 100vw;
 }
-.register-login-components .border-container {
+.register-login-components .box-shadow-container {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 25px;
-  border: 3px solid black;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1), -2px 2px 5px rgba(0, 0, 0, 0.1);
   background-color: white;
   padding: 25px;
   width: 400px;
@@ -171,10 +171,9 @@
   border: 1px solid #757575;
   border-radius: 5px;
   background: #e5e5e5;
-  padding: 8px;
+  padding: 8px 12px;
   width: 100%;
   font-size: 14px;
-  text-align: center;
 }
 .register-login-components .form__input-text:focus {
   border-color: #2ba6c5;
