--- a/client/src/CSS/scss_partials/authentication/_authentication.scss
+++ b/client/src/CSS/scss_partials/authentication/_authentication.scss
@@ -1,7 +1,7 @@
 @use "../utils/variables" as v;
 @use "../utils/mixins" as m;
 
-.register-login-components {
+.authentication-component {
 	.background {
 		position: absolute;
 		top: 0;
@@ -10,24 +10,60 @@
 		height: 100vh;
 		width: 100vw;
 	}
+	.background-cover {
+		position: absolute;
+		top: 0;
+		left: 0;
+		background-color: #00000018;
+		height: 100vh;
+		width: 100vw;
+	}
 
-	.box-shadow-container {
+	.login-component {
 		position: fixed;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
-		border-radius: 25px;
+		border-radius: 10px;
 		box-shadow: v.$common-modal-box-shadow;
 		background-color: white;
 		padding: 25px;
-		width: 400px;
-		text-align: center;
+		height: 500px;
+		width: 1000px;
+	}
+
+	.register-component {
+		position: fixed;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+		border-radius: 10px;
+		box-shadow: v.$common-modal-box-shadow;
+		background-color: white;
+		padding: 25px;
+		height: 500px;
+		width: 410px;
+	}
+
+	.form {
+		position: absolute;
+		top: 50%;
+		right: 40px;
+		transform: translate(0%, -50%);
+		width: 375px;
 		font-family: Verdana, Geneva, sans-serif;
 	}
 
-	.title {
-		margin-bottom: 25px;
-		font-size: 30px;
+	.form--register {
+		right: 50%;
+		transform: translate(50%, -50%);
+	}
+
+	.form__title {
+		margin-bottom: 20px;
+		font-size: 25px;
+		font-weight: 700;
+		text-align: center;
 	}
 
 	.form__pair-container {
@@ -65,12 +101,13 @@
 
 		margin-top: v.$common-register-login-form-input-margin-top;
 		margin-bottom: v.$common-register-login-form-input-margin-bottom;
+		box-shadow: v.$common-form-input-box-shadow;
 		outline: none;
 		border: v.$common-form-input-text-border-width solid
 			v.$mode-common-form-input-border-color-light;
 		border-radius: v.$common-form-input-border-radius;
 		background: v.$mode-common-form-input-background-color-light;
-		padding: 8px 12px;
+		padding: 12px 16px;
 		width: 100%;
 		font-size: 14px;
 
@@ -84,16 +121,16 @@
 	}
 
 	.form__submit {
-		margin-top: 15px;
+		margin-top: 25px;
 		margin-bottom: 5px;
 		outline: none;
 		border: 0;
 		border-radius: v.$common-buttton-border-radius;
 		background-color: v.$common-register-login-submit-button-border-background-color;
-		padding: 10px;
+		padding: 12px;
 		width: 100%;
 		color: white;
-		font-size: 16px;
+		font-size: 18px;
 		cursor: pointer;
 
 		&:hover,
@@ -103,16 +140,44 @@
 		}
 	}
 
-	.bottom-question {
-		margin-top: 25px;
-		font-size: 17px;
+	.form__bottom-link-container {
+		margin-top: 40px;
+		font-size: 15px;
+		text-align: center;
 	}
 
-	.bottom-question__link {
+	.form__bottom-link-container__link {
 		margin-left: 10px;
 		color: v.$common-register-login-bottom-link-text-color;
-		font-size: 18px;
+		font-size: 16px;
 		text-decoration: none;
 		cursor: pointer;
+
+		&:hover,
+		&:active {
+			text-decoration: underline;
+		}
+	}
+
+	.login-component__intro-container {
+		position: absolute;
+		top: 42%;
+		left: 30px;
+		transform: translate(0%, -50%);
+		font-family: Verdana, Geneva, sans-serif;
+	}
+
+	.login-component__intro-container__logo {
+		display: block;
+		width: 400px;
+	}
+
+	.login-component__intro-container__description {
+		display: block;
+		margin: 5px 0px 0px 16px;
+		color: #636363;
+		font-size: 26px;
+		font-weight: 500;
+		line-height: 36px;
 	}
 }
