--- a/client/src/CSS/scss_partials/utils/_mixins.scss
+++ b/client/src/CSS/scss_partials/utils/_mixins.scss
@@ -63,8 +63,13 @@
 
 @mixin backend-error() {
 	display: block;
+	padding-left: 5px;
 	color: v.$mode-common-backend-errors-text-color-light;
-	text-align: center;
+	font-size: v.$common-backend-errors-font-size;
+
+	i {
+		padding-right: 10px;
+	}
 }
 
 @mixin common-form-submit-button() {
