--- a/client/src/CSS/styles.css
+++ b/client/src/CSS/styles.css
@@ -115,7 +115,7 @@
   cursor: pointer;
 }
 
-.register-login-components .background {
+.authentication-component .background {
   position: absolute;
   top: 0;
   left: 0;
@@ -123,92 +123,153 @@
   height: 100vh;
   width: 100vw;
 }
-.register-login-components .box-shadow-container {
+.authentication-component .background-cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #00000018;
+  height: 100vh;
+  width: 100vw;
+}
+.authentication-component .login-component {
   position: fixed;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border-radius: 25px;
+  border-radius: 10px;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1), -2px 2px 5px rgba(0, 0, 0, 0.1);
   background-color: white;
   padding: 25px;
-  width: 400px;
-  text-align: center;
+  height: 500px;
+  width: 1000px;
+}
+.authentication-component .register-component {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1), -2px 2px 5px rgba(0, 0, 0, 0.1);
+  background-color: white;
+  padding: 25px;
+  height: 500px;
+  width: 410px;
+}
+.authentication-component .form {
+  position: absolute;
+  top: 50%;
+  right: 40px;
+  transform: translate(0%, -50%);
+  width: 375px;
   font-family: Verdana, Geneva, sans-serif;
 }
-.register-login-components .title {
-  margin-bottom: 25px;
-  font-size: 30px;
+.authentication-component .form--register {
+  right: 50%;
+  transform: translate(50%, -50%);
 }
-.register-login-components .form__pair-container {
+.authentication-component .form__title {
+  margin-bottom: 20px;
+  font-size: 25px;
+  font-weight: 700;
+  text-align: center;
+}
+.authentication-component .form__pair-container {
   display: inline-block;
   width: 100%;
 }
-.register-login-components .form__pair-container__single-container {
+.authentication-component .form__pair-container__single-container {
   float: left;
   width: 46%;
 }
-.register-login-components .form__pair-container__single-container--right {
+.authentication-component .form__pair-container__single-container--right {
   float: right;
 }
-.register-login-components .form__label {
+.authentication-component .form__label {
   float: left;
   margin-top: 5px;
   font-size: 16px;
 }
-.register-login-components .form__char-counter {
+.authentication-component .form__char-counter {
   float: right;
   margin: 4px 2px 0px 0px;
   font-size: 16px;
 }
-.register-login-components .form__input-text {
+.authentication-component .form__input-text {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 16px;
+  margin-bottom: 8px;
+  box-shadow: inset 1px 1px 1px rgba(0, 0, 0, 0.01), inset -1px 1px 1px rgba(0, 0, 0, 0.01);
   outline: none;
-  border: 1px solid #757575;
+  border: 1px solid #bfbfbf;
   border-radius: 5px;
-  background: #e5e5e5;
-  padding: 8px 12px;
+  background: #f8f8f8;
+  padding: 12px 16px;
   width: 100%;
   font-size: 14px;
 }
-.register-login-components .form__input-text:focus {
+.authentication-component .form__input-text:focus {
   border-color: #2ba6c5;
 }
-.register-login-components .backend-errors {
+.authentication-component .backend-errors {
   display: block;
+  padding-left: 5px;
   color: #ff0000;
-  text-align: center;
+  font-size: 14px;
 }
-.register-login-components .form__submit {
-  margin-top: 15px;
+.authentication-component .backend-errors i {
+  padding-right: 10px;
+}
+.authentication-component .form__submit {
+  margin-top: 25px;
   margin-bottom: 5px;
   outline: none;
   border: 0;
   border-radius: 10px;
   background-color: #87b2bd;
-  padding: 10px;
+  padding: 12px;
   width: 100%;
   color: white;
-  font-size: 16px;
+  font-size: 18px;
   cursor: pointer;
 }
-.register-login-components .form__submit:hover, .register-login-components .form__submit:active, .register-login-components .form__submit:focus {
+.authentication-component .form__submit:hover, .authentication-component .form__submit:active, .authentication-component .form__submit:focus {
   background-color: #7aa2ac;
 }
-.register-login-components .bottom-question {
-  margin-top: 25px;
-  font-size: 17px;
+.authentication-component .form__bottom-link-container {
+  margin-top: 40px;
+  font-size: 15px;
+  text-align: center;
 }
-.register-login-components .bottom-question__link {
+.authentication-component .form__bottom-link-container__link {
   margin-left: 10px;
-  color: #0000ff;
-  font-size: 18px;
+  color: #2d2dff;
+  font-size: 16px;
   text-decoration: none;
   cursor: pointer;
+}
+.authentication-component .form__bottom-link-container__link:hover, .authentication-component .form__bottom-link-container__link:active {
+  text-decoration: underline;
+}
+.authentication-component .login-component__intro-container {
+  position: absolute;
+  top: 42%;
+  left: 30px;
+  transform: translate(0%, -50%);
+  font-family: Verdana, Geneva, sans-serif;
+}
+.authentication-component .login-component__intro-container__logo {
+  display: block;
+  width: 400px;
+}
+.authentication-component .login-component__intro-container__description {
+  display: block;
+  margin: 5px 0px 0px 16px;
+  color: #636363;
+  font-size: 26px;
+  font-weight: 500;
+  line-height: 36px;
 }
 
 .home-component {
@@ -504,7 +565,7 @@ dropdown can overlap all other components
 }
 .navbar-hamburger-component .hamburger-dropdown__row-button--item-name,
 .js-get-navbar-hamburger-component .hamburger-dropdown__row-button--item-name {
-  color: #0000ff;
+  color: #2d2dff;
 }
 .navbar-hamburger-component .hamburger-dropdown__row-button--last-option-round-bottom-border,
 .js-get-navbar-hamburger-component .hamburger-dropdown__row-button--last-option-round-bottom-border {
@@ -757,8 +818,12 @@ dropdown can overlap all other components
 }
 .account-sidebar-change-theme-component .backend-errors {
   display: block;
+  padding-left: 5px;
   color: #ff0000;
-  text-align: center;
+  font-size: 14px;
+}
+.account-sidebar-change-theme-component .backend-errors i {
+  padding-right: 10px;
 }
 
 .account-modal-component .account-modal {
@@ -833,10 +898,10 @@ dropdown can overlap all other components
   margin-top: 5px;
   margin-bottom: 10px;
   outline: none;
-  border: 1px solid #757575;
+  border: 1px solid #bfbfbf;
   border-radius: 5px;
   box-sizing: border-box;
-  background: #e5e5e5;
+  background: #f8f8f8;
   padding: 8px;
   width: 100%;
   font-size: 14px;
@@ -847,8 +912,12 @@ dropdown can overlap all other components
 }
 .account-modal-component .backend-errors {
   display: block;
+  padding-left: 5px;
   color: #ff0000;
-  text-align: center;
+  font-size: 14px;
+}
+.account-modal-component .backend-errors i {
+  padding-right: 10px;
 }
 .account-modal-component .form__submit {
   outline: none;
@@ -941,7 +1010,7 @@ dropdown can overlap all other components
   margin: 2px 15px 0 0;
   outline: none;
   border: 1px solid gray;
-  background: #e5e5e5;
+  background: #f8f8f8;
   width: 120px;
   font-size: 13px;
 }
@@ -1019,9 +1088,13 @@ dropdown can overlap all other components
 }
 .delete-modal-component .backend-errors {
   display: block;
+  padding-left: 5px;
   color: #ff0000;
-  text-align: center;
+  font-size: 14px;
   margin-top: 10px;
+}
+.delete-modal-component .backend-errors i {
+  padding-right: 10px;
 }
 .delete-modal-component .centered-buttons-container {
   position: absolute;
@@ -1228,9 +1301,14 @@ dropdown can overlap all other components
 .item-view-component .backend-errors,
 .js-get-item-view-component .backend-errors {
   display: block;
+  padding-left: 5px;
   color: #ff0000;
-  text-align: center;
+  font-size: 14px;
   margin-top: 10px;
+}
+.item-view-component .backend-errors i,
+.js-get-item-view-component .backend-errors i {
+  padding-right: 10px;
 }
 .item-view-component .backend-errors--item-name,
 .js-get-item-view-component .backend-errors--item-name {
@@ -2229,9 +2307,13 @@ dropdown can overlap all other components
 }
 .create-item-sidebar-component .backend-errors {
   display: block;
+  padding-left: 5px;
   color: #ff0000;
-  text-align: center;
+  font-size: 14px;
   font-size: 15px;
+}
+.create-item-sidebar-component .backend-errors i {
+  padding-right: 10px;
 }
 .create-item-sidebar-component .form__label,
 .create-item-sidebar-component .form__group-container__input-container__label,
@@ -2252,9 +2334,9 @@ dropdown can overlap all other components
   margin-top: 2px;
   margin-bottom: 10px;
   outline: none;
-  border: 1px solid #757575;
+  border: 1px solid #bfbfbf;
   border-radius: 5px;
-  background: #e5e5e5;
+  background: #f8f8f8;
   padding: 6px;
   width: 100%;
   font-size: 13px;
@@ -2270,9 +2352,9 @@ dropdown can overlap all other components
   margin-top: 2px;
   margin-bottom: 10px;
   outline: none;
-  border: 1px solid #757575;
+  border: 1px solid #bfbfbf;
   border-radius: 5px;
-  background: #e5e5e5;
+  background: #f8f8f8;
   padding: 4px 6px 4px 6px;
   height: 150px;
   width: 100%;
@@ -2299,7 +2381,7 @@ dropdown can overlap all other components
   margin-bottom: 10px;
   outline: none;
   border: 1px solid gray;
-  background: #e5e5e5;
+  background: #f8f8f8;
   width: 97%;
   font-size: 13px;
 }
@@ -2311,7 +2393,7 @@ dropdown can overlap all other components
   margin-bottom: 10px;
   outline: none;
   border: 1px solid gray;
-  background: #e5e5e5;
+  background: #f8f8f8;
   width: 100%;
   font-size: 13px;
 }
@@ -2901,14 +2983,14 @@ body {
 }
 .app-component .js-get-common-element-form-input-border-background-text-color-dark-mode-false,
 .js-get-app-component .js-get-common-element-form-input-border-background-text-color-dark-mode-false {
-  border-color: #757575;
-  background-color: #e5e5e5;
+  border-color: #bfbfbf;
+  background-color: #f8f8f8;
   color: black;
 }
 .app-component .js-get-common-element-form-input-border-background-text-color-dark-mode-true,
 .js-get-app-component .js-get-common-element-form-input-border-background-text-color-dark-mode-true {
-  border-color: black;
-  background-color: #484848;
+  border-color: #272727;
+  background-color: #444444;
   color: #c7d1db;
 }
 .app-component .js-get-common-top-bar-component-border-and-background-color-dark-mode-false,
@@ -3027,7 +3109,7 @@ body {
 }
 .app-component .js-get-navbar-hamburger-component-dropdown-element-border-background-text-color-dark-mode-false > .hamburger-dropdown__row-button--item-name,
 .js-get-app-component .js-get-navbar-hamburger-component-dropdown-element-border-background-text-color-dark-mode-false > .hamburger-dropdown__row-button--item-name {
-  color: #0000ff;
+  color: #2d2dff;
 }
 .app-component .js-get-navbar-hamburger-component-dropdown-element-border-background-text-color-dark-mode-true,
 .js-get-app-component .js-get-navbar-hamburger-component-dropdown-element-border-background-text-color-dark-mode-true {
